--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -20,5 +20,15 @@
 </div>
 <% end %>
 
-  </div>
+   <% if place.photos.present? %>
+    <div class="col-12">
+      <blockquote>
+        <% if place.photos.last.present? %>
+          <b><%= place.photos.last %></b> -
+        <% end %>
+        <%= place.photos.last.caption %>
+        <small><%= place.photos.last.user.email %></small>
+      </blockquote>
+    </div>
+  <% end %>
 <% end %>
